fixed mobile overflow 📝

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,8 +18,11 @@ tfoot, thead, tr, th, td, article, aside,
 canvas, details, embed, figure, figcaption,
 footer, header, hgroup, menu, nav, output, ruby,
 section, summary, time, mark, audio, video {
+	width: 100%;
+	height: 100%;
 	margin: 0;
 	padding: 0;
+	overflow-x: hidden;
 	border: 0;
 	font-size: 100%;
 	font: inherit;
@@ -1306,15 +1309,12 @@ input, select, textarea {
 	}
 
 	body {
-		background-image: url("images/overlayy.png"), url("images/bg.jpg");
+		background-image: url("images/overlay.png"), url("images/bg.jpg");
 		background-repeat: repeat, no-repeat;
-		background-size: 100% 100%; /* Ensure the background image covers the entire area */
-		background-position: center; /* Center the background image within the container */
+		background-size: auto, 100% 100%;
 		background-attachment: fixed;
 		overflow-y: scroll;
-		margin: 0;
-		padding: 0;
-	  }	  
+	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
 			-moz-animation: none !important;
